<resources>
    <string name="app_name">Trimio</string>
</resources>
